--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,10 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+}
+@layer base{
+  h1 {
+    @apply font-extrabold text-2xl mb-3;
+  }
 }
